# Light_System

./: CMakeLists.txt  COPYING  README.md
Project_Source/demos/: main.cpp
Project_Source/include/LightSystem/: CustomCircle.hpp  LightPass.hpp  Shader.hpp
Project_Source/include/Movement/: Math.hpp  Movement.hpp
Project_Source/src/: CMakeLists.txt  bou.cpp
Project_Source/src/LightSystem/: CustomCircle.cpp  LightPass.cpp
Project_Source/src/shader/: Basic.vert  Light.frag
cmake/: Config.cmake
